<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/toolbar_back_button"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image"
                android:src="@drawable/ic_back_30"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toolbar_title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/a_otf_shueimgostd_b"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/text_color_primary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:id="@+id/password_reset_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/hirakakupro_w6"
            android:text="@string/will_send_password_reset_url"
            android:textColor="@color/brownishGrey"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:autofillHints="no"
            android:fontFamily="@font/hirakakupro_w6"
            android:backgroundTint="@color/whiteFour"
            android:hint="@string/mail_address_input_hint"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:theme="@style/MyEditTextStylePrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_reset_message" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:fontFamily="@font/hirakakupro_w6"
            android:text="@string/enter_registered_email"
            android:textColor="@color/brownishGrey" />

        <Button
            android:id="@+id/send_mail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:enabled="false"
            android:background="@drawable/background_button_enable_disable_state"
            android:fontFamily="@font/a_otf_shueimgostd_b"
            android:text="@string/send_confirmation_email"
            android:textColor="@color/whiteTwo"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>